--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ pom.propertes
 MANIFEST.MF
 What_Do_I_Sell_Today/.classpath
 /What_Do_I_Sell_Today/.classpath
+What_Do_I_Sell_Today/.settings/org.eclipse.jdt.core.prefs
+/What_Do_I_Sell_Today/.settings/org.eclipse.jdt.core.prefs
+What_Do_I_Sell_Today/.settings/org.eclipse.wst.common.project.facet.core.xml
+/What_Do_I_Sell_Today/.settings/org.eclipse.wst.common.project.facet.core.xml
+*.class
