--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ What_Do_I_Sell_Today/.settings/org.eclipse.jdt.core.prefs
 What_Do_I_Sell_Today/.settings/org.eclipse.wst.common.project.facet.core.xml
 /What_Do_I_Sell_Today/.settings/org.eclipse.wst.common.project.facet.core.xml
 *.class
+
+
+*/target/*
+target/*
+/target/m2e-wtp/web-resources/META-INF/maven/com.wdist/biz/pom.properties
