--- a/What_Do_I_Sell_Today/src/main/webapp/WEB-INF/web.xml
+++ b/What_Do_I_Sell_Today/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,10 @@
 	
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:applicationContext.xml</param-value>
+			<param-value>
+			classpath:applicationContext.xml
+			/WEB-INF/security-context.xml
+			</param-value>
 	</context-param>
 	
 	<listener>
