--- a/What_Do_I_Sell_Today/src/main/webapp/WEB-INF/web.xml
+++ b/What_Do_I_Sell_Today/src/main/webapp/WEB-INF/web.xml
@@ -3,22 +3,22 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 	<welcome-file-list>
-        <welcome-file>/main.do</welcome-file>
-        <welcome-file>index.htm</welcome-file>
-        <welcome-file>index.jsp</welcome-file>
-    </welcome-file-list>
-	
+		<welcome-file>/main.do</welcome-file>
+		<welcome-file>index.htm</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
+
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-			<param-value>
+		<param-value>
 			classpath:applicationContext.xml
-			</param-value>
+		</param-value>
 	</context-param>
-	
+
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-	
+
 	<servlet>
 		<servlet-name>action</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -28,10 +28,11 @@
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-	
+
 	<servlet-mapping>
 		<servlet-name>action</servlet-name>
 		<url-pattern>*.do</url-pattern>
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
 	<filter>
@@ -48,12 +49,7 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<!-- naver XSS Filter -->
-	<!-- <filter>
-		<filter-name>xssEscapeServletFilter</filter-name>
-		<filter-class>com.navercorp.lucy.security.xss.servletfilter.XssEscapeServletFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>xssEscapeServletFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping> -->
+	<!-- <filter> <filter-name>xssEscapeServletFilter</filter-name> <filter-class>com.navercorp.lucy.security.xss.servletfilter.XssEscapeServletFilter</filter-class> 
+		</filter> <filter-mapping> <filter-name>xssEscapeServletFilter</filter-name> 
+		<url-pattern>/*</url-pattern> </filter-mapping> -->
 </web-app>
