--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ What_Do_I_Sell_Today/.settings/org.eclipse.wst.common.project.facet.core.xml
 */target/*
 target/*
 /target/m2e-wtp/web-resources/META-INF/maven/com.wdist/biz/pom.properties
+/What_Do_I_Sell_Today.zip
